--- a/CSS/Second CSS.html
+++ b/CSS/Second CSS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-    <title>Second CSS</title>
+    <title>Sally</title>
         /* This is a css comment */
         <link rel="stylesheet" href="style.css">
 </head>
