--- a/CSS/Third CSS.html
+++ b/CSS/Third CSS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-    <title>Third CSS</title>
+    <title>Third CSS 3</title>
     <style>
         p{
             text-align:justify;
