--- a/CSS/Project CSS.html
+++ b/CSS/Project CSS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-    <title>Project CSS</title>
+    <title>project CSS</title>
 </head>
 <body>
     <thead style='text-align:right;'>
